--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,11 +1,11 @@
 <h1>Long Nguyen 🐎 ITIS 3135</h1>
 <nav>
-    <a href="/lnguye65">Home || </a>
-    <a href="/lnguye65/itis3135/introduction/">Introduction || </a>
-    <a href="/lnguye65/itis3135/contract/">Contract || </a>
-    <a href="/lnguye65/itis3135/about/">Lively Nightingale Creations</a>
+    <a href="/">Home || </a>
+    <a href="/itis3135/introduction/">Introduction || </a>
+    <a href="/itis3135/contract/">Contract || </a>
+    <a href="/itis3135/about/">Lively Nightingale Creations</a>
 </nav>
 <nav>
-    <a href="/lnguye65/itis3135/stuff/CRAPPYPAGE.html">CRAPPY ||</a>
-    <a href="/lnguye65/itis3135/hobby/">Hobby</a>
+    <a href="/itis3135/stuff/CRAPPYPAGE.html">CRAPPY ||</a>
+    <a href="/itis3135/hobby/">Hobby</a>
 </nav>
